Progress checkpoint, looks like the poller is working

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
       "express": "*",
       "request": "*",
       "dirty": "*",
+      "bufferjs": "*",
+      "node-uuid": "*",
       "underscore": "*",
       "backbone": "*",
       "commander": "*",
